[project]
name = "wvu-ieng-331-m2-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lily Powell", email = "lcp00008@mix.wvu.edu" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wvu-ieng-331-m2-5 = "wvu_ieng_331_m2_5:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
